# grpc-quickfix-example

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
config/: FIX42.xml  cfg.yaml  fix.ini
fantasy-fix42/: Cargo.toml  build.rs
fantasy-fix42/src/: fantasy_FIX42.xml
proto/: example.proto
src/: broker.rs  cfg.rs  fix_client.rs  fix_interface.rs  gw_plugin.rs  main.rs  order_manager.rs  server.rs  shared_data.rs
src/fix_convert/: broker.rs  mod.rs
stub/: quickfix_server.cfg  server.py
