[package]
name = "quickfix-test"
version = "0.1.0"
edition = "2024"

[dependencies]
# quickfix-msg42 = { git = "https://github.com/fantasy-peak/quickfix-rs.git" }
# coinbase-fix50-market-data = { git = "https://github.com/fantasy-peak/quickfix-rs.git" }
# coinbase-fix-utils = { git = "https://github.com/fantasy-peak/quickfix-rs.git" }
quickfix = { git = "https://github.com/fantasy-peak/quickfix-rs.git" }
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.5"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
tonic-reflection = "0.12.3"

chrono = "0.4.39"
config = "0.15.8"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.33"

log = "0.4.26"
env_logger = "0.11.6"

fantasy-fix42 = { path = "./fantasy-fix42" }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "server"
path = "src/main.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"
